# webscraping-bookstore

./: .gitignore  README.md  pyproject.toml
src/: config.yml  extractor.py  loader.py  main.py  parsers.py
src/utils/: log.py
